Fixed theme test z-index

--- a/public/styles.css
+++ b/public/styles.css
@@ -179,7 +179,7 @@ footer {
     position: absolute;
     top: 4.7em;
     right: 1.2em;
-    z-index: 2;
+    z-index: 0;
     cursor: pointer;
 }
 
